--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="#">Ultimate CI/CD Pipeline of Java appl</div></a>
+    <a class="navbar-brand" href="#">End-to-End CI/CD Pipeline of Java-appl: CI-Jenkins and CD-argoCD</div></a>
 </nav>
 
 <main role="main" class="container">
